--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="header">
-            <nav class="nav nav-container">
+            <nav class="nav container">
                 <a href="#" class="nav__logo">
                     XCOMPANY
                 </a>
+
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
@@ -31,17 +32,19 @@
                             <a href="#" class="nav__link">Contact</a>
                         </li>
                     </ul>
+
                     <div class="nav__close" id="nav-close">
-                        <i class="bx bx-x"></i>
+                        <i class='bx bx-x'></i>
                     </div>
                 </div>
-                <!-- Toggle button -->
 
+                <!-- Toggle button -->
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class="bx bx-grid-alt"></i>
+                    <i class='bx bx-grid-alt'></i>
                 </div>
             </nav>
         </header>
+
 
         <!--==================== MAIN ====================-->
         <main class="main">
@@ -54,13 +57,26 @@
                         <p class="home__description">
                             We can't seem to find the page <br/> you are looking for.
                         </p>
+                        <a href="#" class="home__button">
+                            Go Home
+                        </a>
+                    </div>
+                    <div class="home__img">
+                        <img src="./img/ghost-img.png" alt="Page not found image">
+                        <div class="home__shadow"></div>
                     </div>
                 </div>
+
+                <footer class="home__footer">
+                    <span>(554)987-654</span>
+                    <span></span>
+                    <span>info@company.com</span>
+                </footer>
             </section>
         </main>
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src=""></script>
+        <script src="./js/scrollreveal.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
         <script src="./js/main.js"></script>
